succinct RMQ data structure

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,2 +1,3 @@
 add_executable(test_completion_trie test_completion_trie.cpp)
 add_executable(test_fc_dictionary test_fc_dictionary.cpp)
+add_executable(test_succinct_rmq test_succinct_rmq.cpp)
