--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -4,3 +4,4 @@ add_executable(test_cartesian_tree test_cartesian_tree.cpp)
 add_executable(test_inverted_index test_inverted_index.cpp)
 add_executable(test_forward_index test_forward_index.cpp)
 add_executable(test_unsorted_list test_unsorted_list.cpp)
+add_executable(test_autocomplete test_autocomplete.cpp)
