--- a/benchmark/CMakeLists.txt
+++ b/benchmark/CMakeLists.txt
@@ -1,1 +1,2 @@
 add_executable(benchmark_prefix_topk benchmark_prefix_topk.cpp)
+add_executable(benchmark_conjunctive_topk benchmark_conjunctive_topk.cpp)
