--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,9 @@
 [submodule "external/essentials"]
 	path = external/essentials
 	url = https://github.com/jermp/essentials
+[submodule "external/jQuery-Autocomplete"]
+	path = external/jQuery-Autocomplete
+	url = https://github.com/devbridge/jQuery-Autocomplete.git
+[submodule "external/mongoose"]
+	path = external/mongoose
+	url = https://github.com/cesanta/mongoose.git
