--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -7,3 +7,4 @@ add_executable(test_forward_index test_forward_index.cpp)
 add_executable(test_unsorted_list test_unsorted_list.cpp)
 add_executable(test_autocomplete test_autocomplete.cpp)
 add_executable(test_locate_prefix test_locate_prefix.cpp)
+add_executable(test_blocked_inverted_index test_blocked_inverted_index.cpp)
