results for inverted index compression

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,2 +1,3 @@
 add_executable(build build.cpp)
 add_executable(web_server web_server.cpp ../external/mongoose/mongoose.c)
+add_executable(output_ds2i_format output_ds2i_format.cpp)
