--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -3,3 +3,4 @@ add_executable(web_server web_server.cpp ../external/mongoose/mongoose.c)
 add_executable(output_ds2i_format output_ds2i_format.cpp)
 add_executable(statistics statistics.cpp)
 add_executable(check_topk check_topk.cpp)
+add_executable(map_queries map_queries.cpp)
