--- a/benchmark/CMakeLists.txt
+++ b/benchmark/CMakeLists.txt
@@ -4,3 +4,4 @@ add_executable(benchmark_conjunctive_topk benchmark_conjunctive_topk.cpp)
 add_executable(benchmark_fc_dictionary benchmark_fc_dictionary.cpp)
 add_executable(benchmark_integer_fc_dictionary benchmark_integer_fc_dictionary.cpp)
 add_executable(benchmark_locate_prefix benchmark_locate_prefix.cpp)
+add_executable(effectiveness effectiveness.cpp)
