--- a/.github/workflows/continuous_integration.yml
+++ b/.github/workflows/continuous_integration.yml
@@ -32,6 +32,10 @@ jobs:
         working-directory: ./build
         run: cmake --build . --config Release
 
+      - name: Data preprocessing
+        working-directory: ./test_data
+        run: bash preprocess.sh trec_05_efficiency_queries/trec_05_efficiency_queries.completions 300
+
       - name: Testing
         working-directory: ./build
         run: ctest
