--- a/.github/workflows/continuous_integration.yml
+++ b/.github/workflows/continuous_integration.yml
@@ -33,6 +33,10 @@ jobs:
         run: cmake --build . --config Release
 
       - name: Data preprocessing
+        uses: actions/setup-python@v2
+        with:
+          python-version: 2.x
+          architecture: x64
         working-directory: ./test_data
         run: bash preprocess.sh trec_05_efficiency_queries/trec_05_efficiency_queries.completions 300
 
