ci: fixed yaml indentation
Signed-off-by: Rajdeep Roy Chowdhury <rrajdeeproychowdhury@gmail.com>

--- a/.github/workflows/continuous_integration.yml
+++ b/.github/workflows/continuous_integration.yml
@@ -34,9 +34,9 @@ jobs:
 
       - name: Setup python
         uses: actions/setup-python@v2
-          with:
-            python-version: 2.x
-            architecture: x64
+        with:
+          python-version: '2.x'
+          architecture: 'x64'
 
       - name: Data preprocessing
         working-directory: ./test_data
