--- a/.github/workflows/continuous_integration.yml
+++ b/.github/workflows/continuous_integration.yml
@@ -46,6 +46,10 @@ jobs:
         working-directory: ./build
         run: ctest
 
+      - name: Build binary dictionary
+        working-directory: build
+        run: chmod +x build && ./build ef_type1 ../test_data/trec_05_efficiency_queries/trec_05_efficiency_queries.completions -o trec_05.ef_type1.bin
+
       - name: Building docker image
         run: docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/autocomplete:latest .
 
